--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Search</title>
+    <title>Google Search</title>
 </head>
 <body>
-    <form action="https://google.com/search">
-        <input type ="text" name="q">
-            <input type=text name=q> <input type="submit" value="Google Search">
-    </form>
+    <div id="viewport">
+        <section class="links">
+            <a href="https://images.google.com">Google Images</a>
+            <a href="https://www.google.com/advanced_search">Google Advanced Search</a>
+        </section>
+        <form action="https://google.com/search">
+            <h1>Google</h1>
+            <div>
+                <input type="text" name="q">
+            </div>
+            <div>
+                <input type="submit" value="Google Search">
+                <input type="submit" value="I'm Feeling Lucky">
+            </div>
+
+        </form>
+
+        
+    </div>
 </body>
 </html>
